--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 
     <!-- footer begin -->
      <div style="margin-bottom: 0px; width:100%; background-color:darkslategray; text-align:center; position:relative; bottom:0; left:0;">
-        <p style="padding: 5px; color:white; margin-bottom:0px">Hand-tailored by Dibyajyoti Mondal © 2020</p>
+        <p style="padding: 5px; color:white; margin-bottom:0px">Made by Prithviraj Biswas © 2020</p>
         <div style="width: fit-content; padding-bottom:5px; margin-left:auto; margin-right:auto;">
             <a href="https://github.com/djm-1" target="blank"><img src="{% static 'github.svg' %}" alt="" style="height: 25px; width:25px; margin:3px;"></a>
             <a href="mailto:dibyajyoti.bhs@gmail.com" target="blank"><img src="{% static 'gmail.svg' %}" alt="" style="height: 25px; width:25px; margin:3px;"></a>
