--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -21,10 +21,7 @@
         <div class="col-md-8" style="padding: 30px;">
             <h2 class="heading-1">About Me</h2>
             <p class="abt">
-                Hi! I am Dibyajyoti Mondal. I am currently studying Electronics and Telecommunication 
-                Engineering At Jadavpur University. I love to code and make cool stuffs. My interest 
-                lies in the field of Software engineering and development. I am currently trying my 
-                hands on Web development. 
+                Hi! I am Prithviraj Biswas. A full stack web developer! Open Source! 
 
             </p>
         </div>
