--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}
-      <title>Quizmaster</title>
+      <title>Give your Exams</title>
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <link rel="stylesheet" href="{% static 'home.css' %}">
@@ -23,8 +23,8 @@
     {% endfor %}
 {% endif %}
 <div class="headbox">
-  <h1 style="font-family: 'Ubuntu', sans-serif;">Welcome to Quizmaster</h1>
-  <p style="font-weight: bolder; font-size: 20px;">The ultimate quiz platform</p>
+  <h1 style="font-family: 'Ubuntu', sans-serif;">Give your Exams</h1>
+  <p style="font-weight: bolder; font-size: 20px;">Made by Prithviraj Biswas</p>
 </div>    
 {% if user.is_authenticated %}
 <!-- hosting your contest   -->
@@ -123,7 +123,7 @@
       <img src="{% static 'quiz.svg' %}" alt="No img" width="90%" height="90%">
   </div>  
   <div class="col-md-6">
-    <h1 style="font-family: 'Ubuntu', sans-serif; color: #E73C73; padding-left:40px;">Why Quizmaster?</h1>
+    <h1 style="font-family: 'Ubuntu', sans-serif; color: #E73C73; padding-left:40px;">Give Your Exams in this Platform</h1>
     <ol style="padding-top:40px; padding-bottom:40px; font-weight:bolder; font-size:20px;">
       <li>Online platform to host Your quiz contest.</li>
       <li>Secure and modern way of conducting quiz contests.</li>
